@@ -2658,7 +2658,7 @@ name|getContextClassLoader
 argument_list|()
 decl_stmt|;
 name|InputStream
-name|is
+name|is1
 init|=
 name|cl
 operator|.
@@ -2675,6 +2675,13 @@ operator|.
 name|getSchemaManager
 argument_list|()
 decl_stmt|;
+name|LdifReader
+name|reader
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
 specifier|final
 name|String
 name|content
@@ -2687,15 +2694,14 @@ name|IOUtils
 operator|.
 name|toString
 argument_list|(
-name|is
+name|is1
 argument_list|)
 argument_list|,
 name|map
 argument_list|)
 decl_stmt|;
-name|LdifReader
 name|reader
-init|=
+operator|=
 operator|new
 name|LdifReader
 argument_list|(
@@ -2705,9 +2711,7 @@ argument_list|(
 name|content
 argument_list|)
 argument_list|)
-decl_stmt|;
-try|try
-block|{
+expr_stmt|;
 for|for
 control|(
 name|LdifEntry
@@ -2739,10 +2743,19 @@ block|}
 block|}
 finally|finally
 block|{
-name|reader
+name|IOUtils
 operator|.
-name|close
-argument_list|()
+name|closeQuietly
+argument_list|(
+name|reader
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|closeQuietly
+argument_list|(
+name|is1
+argument_list|)
 expr_stmt|;
 block|}
 name|kdc
@@ -2912,28 +2925,35 @@ operator|new
 name|StringBuilder
 argument_list|()
 decl_stmt|;
-name|is
-operator|=
+name|InputStream
+name|is2
+init|=
 name|cl
 operator|.
 name|getResourceAsStream
 argument_list|(
 literal|"minikdc-krb5.conf"
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|BufferedReader
 name|r
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|r
+operator|=
 operator|new
 name|BufferedReader
 argument_list|(
 operator|new
 name|InputStreamReader
 argument_list|(
-name|is
+name|is2
 argument_list|)
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|String
 name|line
 init|=
@@ -2969,11 +2989,24 @@ name|readLine
 argument_list|()
 expr_stmt|;
 block|}
-name|r
+block|}
+finally|finally
+block|{
+name|IOUtils
 operator|.
-name|close
-argument_list|()
+name|closeQuietly
+argument_list|(
+name|r
+argument_list|)
 expr_stmt|;
+name|IOUtils
+operator|.
+name|closeQuietly
+argument_list|(
+name|is2
+argument_list|)
+expr_stmt|;
+block|}
 name|krb5conf
 operator|=
 operator|new
